# AimBot

./: .gitignore  .gitmodules  AimBot.pds.example  AimBot.sublime-project  cur_project  impl.tcl  msg_level.txt
ipcore/: ipml_hsst_v1_4_lite.iar
source/: .rules.verible_lint  AimBot.fdc  AimBot.sv  HdmiOutput.sv  aim_bot_pl.sv  verible.filelist
source/cmsdk-m3/: ahb_to_sram.v
source/constraint/: cam1.fdc  cam2.fdc  clock.fdc  cmsis.fdc  ddr.fdc  ddr16.fdc  ddr32.fdc  debug.fdc  hdmi.fdc  rgmii1.fdc  rgmii2.fdc  top.fdc
source/keil/: AimBot.txt  AimBot.uvguix.WZTong  AimBot.uvoptx  AimBot.uvprojx  main.s
source/module/: HdmiOutput.sv  README.md  bin_buffer.sv  bin_buffers.sv  bin_face.sv  bin_matrix.sv  binary_process.sv  binaryzation.sv  cam_dis_calc.sv  cam_switch.sv  cam_sync.sv  clk_div.sv  color_gradient.sv  compress_window.sv  cortex_m0.sv  cortex_m3.sv  ddr3.sv  ddr3_16.sv  ddr3_32.sv  ddr_writer.sv  delay.sv  draw_window.sv  draw_window_pos_sel.sv  filter_switch.sv  frame_buffer.sv  frame_process.sv  frame_process_3.sv  frame_sender.sv  gamma_correction.sv  gray_convert.sv  gus_filter.sv  hdmi_ctrl.sv  hdmi_display.sv  hdmi_output.sv  hdmi_pack.sv  hdmi_unpack.sv  hsync_gen.sv  key_to_switch.sv  line_buffer.sv  line_fifo.sv  (+34 more)
source/stub/: CORTEXM0INTEGRATION.v  CORTEXM3INTEGRATIONDS.sv  DDR3_50H.v  DDR3_50H_16.sv  DDR3_50H_32.v  GTP_CLKBUFG.sv  GTP_DLL.sv  GTP_INBUF.sv  GTP_INBUFG.sv  GTP_IOCLKBUF.sv  GTP_IOCLKDELAY.sv  GTP_IOCLKDIV.sv  GTP_ISERDES.sv  GTP_OSERDES.sv  (+22 more)
source/yolov5/job on linux/: CMakeLists.txt  main.cpp
synthesize/: AimBot_syn.fic
(+99 files in other folders)
